unpackaged/main/default/objects/ltngMap__Map_Error__c/ltngMap__Map_Error__c.object-meta.xml
<CustomObject>
    <label>Map Error</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Map Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>