unpackaged/main/default/objects/ltngMap__Map_Error__c/fields/ltngMap__Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>ltngMap__Exception_Message__c</fullName>
    <description>If any exception was thrown during the Apex execution to show this component, the message is shown here</description>
    <inlineHelpText>If any exception was thrown during the Apex execution to show this component, the message is shown here</inlineHelpText>
    <label>Exception Message</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>