unpackaged/main/default/objects/ltngMap__Map_Error__c/fields/ltngMap__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>ltngMap__Exception_Type__c</fullName>
    <description>Shows the type of exception thrown when executing the Apex controller associated with the recordMap component, if any.</description>
    <inlineHelpText>If any exception was thrown in Apex during the course of this execution, the type of exception thrown is shown here</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>