unpackaged/main/default/objects/ltngMap__Map_Error__c/fields/ltngMap__Inaccessible_Fields__c.field-meta.xml
<CustomField>
    <fullName>ltngMap__Inaccessible_Fields__c</fullName>
    <description>This field is populated when an error occurs within the recordMap mapping component. The field displays the fields which this user had no access to. Questions? Tweet @SFMichaelHolt</description>
    <inlineHelpText>Shows the fields the user had no access to when attempting to view the recordMap component</inlineHelpText>
    <label>Inaccessible Fields</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>