unpackaged/main/default/objects/ltngMap__Map_Error__c/fields/ltngMap__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ltngMap__Object_Name__c</fullName>
    <description>The name of the object on which this error occurred</description>
    <inlineHelpText>The name of the object on which this error occurred</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>