unpackaged/main/default/objects/ltngMap__Map_Error__c/fields/ltngMap__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>ltngMap__Record_ID__c</fullName>
    <description>The record on which the error occurred</description>
    <inlineHelpText>The record where this error occurred</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>