unpackaged/main/default/objects/ltngMap__Map_Error__c/listViews/ltngMap__All.listView-meta.xml
<ListView>
    <fullName>ltngMap__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>